// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageAnchors > renders with as correctly 1`] = `
"<div class="">
  <ul class="">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:book-open size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Documentation<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-simple-icons:stackblitz size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Playground<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-primary ring-primary text-inverted"><span class="iconify i-lucide:map size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Roadmap<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:rocket size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>
      </a></li>
  </ul>
</div>"
`;

exports[`PageAnchors > renders with class correctly 1`] = `
"<nav class="lg:mb-12">
  <ul class="">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:book-open size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Documentation<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-simple-icons:stackblitz size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Playground<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-primary ring-primary text-inverted"><span class="iconify i-lucide:map size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Roadmap<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:rocket size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>
      </a></li>
  </ul>
</nav>"
`;

exports[`PageAnchors > renders with link slot correctly 1`] = `
"<nav class="">
  <ul class="">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">Link slot</a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">Link slot</a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">Link slot</a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">Link slot</a></li>
  </ul>
</nav>"
`;

exports[`PageAnchors > renders with link-label slot correctly 1`] = `
"<nav class="">
  <ul class="">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:book-open size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Link label slot<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-simple-icons:stackblitz size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Link label slot<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-primary ring-primary text-inverted"><span class="iconify i-lucide:map size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Link label slot<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:rocket size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Link label slot<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>
      </a></li>
  </ul>
</nav>"
`;

exports[`PageAnchors > renders with link-leading slot correctly 1`] = `
"<nav class="">
  <ul class="">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition">Link leading slot</div><span class="truncate">Documentation<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition">Link leading slot</div><span class="truncate">Playground<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-primary ring-primary text-inverted">Link leading slot</div><span class="truncate">Roadmap<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition">Link leading slot</div><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>
      </a></li>
  </ul>
</nav>"
`;

exports[`PageAnchors > renders with link-trailing slot correctly 1`] = `
"<nav class="">
  <ul class="">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:book-open size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Documentation<!--v-if--></span>Link trailing slot
      </a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-simple-icons:stackblitz size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Playground<!--v-if--></span>Link trailing slot
      </a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-primary ring-primary text-inverted"><span class="iconify i-lucide:map size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Roadmap<!--v-if--></span>Link trailing slot
      </a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:rocket size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>Link trailing slot
      </a></li>
  </ul>
</nav>"
`;

exports[`PageAnchors > renders with links correctly 1`] = `
"<nav class="">
  <ul class="">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:book-open size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Documentation<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-simple-icons:stackblitz size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Playground<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-primary ring-primary text-inverted"><span class="iconify i-lucide:map size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Roadmap<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:rocket size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>
      </a></li>
  </ul>
</nav>"
`;

exports[`PageAnchors > renders with ui correctly 1`] = `
"<nav class="">
  <ul class="gap-6">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:book-open size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Documentation<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/playground" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-simple-icons:stackblitz size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Playground<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="/roadmap" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-primary font-semibold">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-primary ring-primary text-inverted"><span class="iconify i-lucide:map size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Roadmap<!--v-if--></span>
      </a></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 py-1 focus-visible:outline-primary text-muted hover:text-default font-medium transition-colors">
        <div class="rounded-md p-1 inline-flex ring-inset ring bg-elevated/50 ring-accented text-dimmed group-hover:bg-primary group-hover:ring-primary group-hover:text-inverted transition"><span class="iconify i-lucide:rocket size-4 shrink-0" aria-hidden="true"></span></div><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>
      </a></li>
  </ul>
</nav>"
`;
